tests/specs/test/exit_code/main.js
Deno.test("Deno.exitCode", () => {
  Deno.exitCode = 42;
});
